pentagon overflow for small and esktop screens fixed

--- a/style.css
+++ b/style.css
@@ -97,14 +97,14 @@ li, p {
 .game-card:nth-child(1) {
     top: 30vh;
     left: center;
-    transform: translate(0,-25vh);
+    transform: translate(0,-22vh);
     
 
 }
 .game-card:nth-child(3) {
     top: 30vh;
     left: center;
-    transform: rotate(144deg) translate(0,-25vh);
+    transform: rotate(144deg) translate(0,-22vh);
 
 
 }
@@ -112,7 +112,7 @@ li, p {
 .game-card:nth-child(4) {
     top: 30vh;
     left: center;
-    transform: rotate(216deg) translate(0,-25vh);
+    transform: rotate(216deg) translate(0,-22vh);
 
 
 }
@@ -120,13 +120,13 @@ li, p {
 .game-card:nth-child(5) {
     top: 30vh;
     left: center;
-    transform: rotate(288deg) translate(0,-25vh);;
+    transform: rotate(288deg) translate(0,-22vh);;
 }
 
 .game-card:nth-child(2) {
     top: 30vh;
     left: center;
-    transform: rotate(72deg) translate(0,-25vh);
+    transform: rotate(72deg) translate(0,-22vh);
 
 }
 .game-card:hover {
